[package]
name = "cantus"
version = "0.6.1"
edition = "2024"

[features]
default = ["spotify"]
spotify = ["webbrowser"]

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

pollster = "0.4.0"
raw-window-handle = "0.6.2"

wayland-backend = { version = "0.3.12", features = ["client_system"] }
wayland-client = { version = "0.31.12", default-features = false }
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }

wgpu = { version = "27.0.1", default-features = false, features = [
    "parking_lot",
    "std",
    "vulkan",
    "wgsl",
] }
wgpu_text = { version = "27.0.1", default-features = false }

time = { version = "0.3.45", features = ["serde"] }
image = { version = "0.25.9", default-features = false, features = [
    "jpeg",
    "png",
] }
auto-palette = { version = "0.9.2", default-features = false }
kmeans_colors = { version = "0.7.1", default-features = false, features = [
    "palette_color",
] }
palette = "0.7.6"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11+spec-1.1.0"

fastrand = "2.3.0"
parking_lot = "0.12.5"
dashmap = "6.1.0"
arrayvec = { version = "0.7.6", features = ["serde"] }
itertools = "0.14.0"
dirs = "6.0.0"
thiserror = "2.0.17"
base64 = "0.22.1"
url = "2.5.8"
sha2 = "0.10.9"
bytemuck = { version = "1.24.0", features = ["derive"] }

# Spotify
ureq = { version = "3.1.4", default-features = false, features = ["rustls"] }
webbrowser = { version = "1.0.6", optional = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too-many-lines = "allow"
too-many-arguments = "allow"
cast-possible-truncation = "allow"
cast-precision-loss = "allow"
cast-sign-loss = "allow"
cast-possible-wrap = "allow"
suboptimal_flops = "allow"
missing-panics-doc = "allow"
unreadable_literal = "allow"

separated_literal_suffix = "warn"
renamed_function_params = "warn"
str_to_string = "warn"
if_then_some_else_none = "warn"
redundant-type-annotations = "warn"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
